xmonad/xmonad.errors

xmonad.hs:1:1: error:
    Could not find module ‘Prelude’
    There are files missing in the ‘base-4.10.0.0’ package,
    try running 'ghc-pkg check'.
    Use -v to see a list of the files searched for.
  |
1 | import XMonad
  | ^

xmonad.hs:1:1: error:
    Could not find module ‘XMonad’
    There are files missing in the ‘xmonad-0.13’ package,
    try running 'ghc-pkg check'.
    Use -v to see a list of the files searched for.
  |
1 | import XMonad
  | ^^^^^^^^^^^^^
